avoid clipping embed player edges

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 }
 
 .player-card.embed:not(.mini) {
-  width: min(900px, 100vw);
+  width: min(900px, calc(100vw - 2px));
   height: min(520px, 96vh);
 }
 
@@ -511,7 +511,7 @@
 }
 
 .player-card.mini {
-  width: min(900px, 100vw);
+  width: min(900px, calc(100vw - 2px));
   min-width: 216px;
   height: 180px;
   display: grid;
